Fixed script load reference

--- a/Search Display Templates/mAdcOW Search Center Templates/mAdcOWGraph/mAdcOW_Control_Graph.html
+++ b/Search Display Templates/mAdcOW Search Center Templates/mAdcOWGraph/mAdcOW_Control_Graph.html
@@ -16,7 +16,7 @@
 <body>
     <script>
         $includeLanguageScript(this.url, "~sitecollection/_catalogs/masterpage/Display Templates/Language Files/{Locale}/CustomStrings.js");
-		$includeLanguageScript(this.url, "~sitecollection/_catalogs/masterpage/Display Templates/mAdcOWGraph/masonry.pkgd.min.js");
+		$includeScript(this.url, "~sitecollection/_catalogs/masterpage/Display Templates/mAdcOWGraph/masonry.pkgd.min.js");
     </script>
     <div id="Control_List">
 <!--#_ 
