jQuery Display Template
jQuery Display Template

--- a/Search Display Templates/jQuery UI Accordion Templates/Control_Accordion.html
+++ b/Search Display Templates/jQuery UI Accordion Templates/Control_Accordion.html
@@ -1,13 +1,13 @@
 <html xmlns:mso="urn:schemas-microsoft-com:office:office" xmlns:msdt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882"> 
 <head>
-<title>Grouping Template</title>
+<title>Control Accordion</title>
 
 <!--[if gte mso 9]><xml>
 <mso:CustomDocumentProperties>
 <mso:TemplateHidden msdt:dt="string">0</mso:TemplateHidden>
-<mso:MasterPageDescription msdt:dt="string">This is the default Control Display Template that will list the items. It does not allow the user to page through items.</mso:MasterPageDescription>
+<mso:MasterPageDescription msdt:dt="string">jQuery UI Accordion Control Template</mso:MasterPageDescription>
 <mso:ContentTypeId msdt:dt="string">0x0101002039C03B61C64EC4A04F5361F385106601</mso:ContentTypeId>
-<mso:TargetControlType msdt:dt="string">;#Content Web Parts;#</mso:TargetControlType>
+<mso:TargetControlType msdt:dt="string">;#SearchResults;#Content Web Parts;#</mso:TargetControlType>
 <mso:HtmlDesignAssociated msdt:dt="string">1</mso:HtmlDesignAssociated>
 <mso:HtmlDesignStatusAndPreview msdt:dt="string">https://estruyfd1.sharepoint.com/_catalogs/masterpage/SPSUK/Grouping/Control_Group.html, Conversion successful.</mso:HtmlDesignStatusAndPreview>
 <mso:HtmlDesignConversionSucceeded msdt:dt="string">True</mso:HtmlDesignConversionSucceeded>
@@ -24,9 +24,9 @@
 
         $includeCSS(this.url, 'https://code.jquery.com/ui/1.11.2/themes/Smoothness/jquery-ui.css');
 
-        Type.registerNamespace('search.Grouping');
+        Type.registerNamespace('search.Accordion');
 
-        search.Grouping = function() {
+        search.Accordion = function() {
             var currentCtx;
             return {
                 init: function (currentContext, encodedId) {
@@ -38,7 +38,7 @@
                     // Add an on post render callback, this will be excuted when all the results are rendered
                     AddPostRenderCallback(currentContext, function() {
                         var groupElm = document.getElementById(encodedId);
-                        search.Grouping.show(groupElm);
+                        search.Accordion.show(groupElm);
                     });
                 },
                 push: function (grouping, content) {
@@ -51,39 +51,34 @@
                 },
                 show: function (groupElm) {
                     EnsureScriptFunc('jquery-ui.min.js', null, function () {
-                        var groups = currentCtx.Grouping
+                        var groups = currentCtx.Grouping;
 
                         var elm = $(groupElm);
-                        elm.append('<ul />');
-
-                        var listElm = elm.find('ul');
 
                         // Add the content to the page
                         for (var key in groups) {
-                            listElm.append(String.format('<li><a href="#{0}">{1}</a></li>', key.trim().replace(/ /g, '-'), key));
-                            elm.append(String.format('<div id="{0}">{1}</div>', key.trim().replace(/ /g, '-'), groups[key]));
+                            elm.append(String.format('<h3>{0}</h3><div>{1}</div>', key, groups[key]));
                         }
 
                         // Start tabbing
-                        elm.tabs();
+                        elm.accordion();
                     });
                 }
             }
         }();
 
-        Srch.U.registerRenderTemplateByName("group_init", search.Grouping.init);
-        Srch.U.registerRenderTemplateByName("group_push", search.Grouping.push);
-        Srch.U.registerRenderTemplateByName("group_show", search.Grouping.show);
+        Srch.U.registerRenderTemplateByName("accordion_init", search.Accordion.init);
+        Srch.U.registerRenderTemplateByName("accordion_push", search.Accordion.push);
     </script>
 
 
-    <div id="Control_List">
+    <div id="Control_jQueryUI">
 
 <!--#_
 var encodedId = $htmlEncode(ctx.ClientControl.get_nextUniqueId() + "_Grouping");
 
 // Grouping init
-Srch.U.getRenderTemplateCollection().group_init(ctx, encodedId);
+Srch.U.getRenderTemplateCollection().accordion_init(ctx, encodedId);
 
 if (!$isNull(ctx.ClientControl) &&
     !$isNull(ctx.ClientControl.shouldRenderControl) &&
