--- a/Search Display Templates/jQuery UI Accordion Templates/Item_Accordion.html
+++ b/Search Display Templates/jQuery UI Accordion Templates/Item_Accordion.html
@@ -1,21 +1,21 @@
 <html xmlns:mso="urn:schemas-microsoft-com:office:office" xmlns:msdt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882"> 
 <head>
-<title>Item Group</title>
+<title>Item Accordion</title>
 
 <!--[if gte mso 9]><xml>
 <mso:CustomDocumentProperties>
 <mso:TemplateHidden msdt:dt="string">0</mso:TemplateHidden>
 <mso:ManagedPropertyMapping msdt:dt="string">'Link':'Path','Line 1'{Line 1}:'Title','Grouping':'SiteTitle'</mso:ManagedPropertyMapping>
-<mso:MasterPageDescription msdt:dt="string">This Item Display Template will show a small thumbnail icon next to a hyperlink of the item title, with an additional line that is available for a custom managed property.</mso:MasterPageDescription>
+<mso:MasterPageDescription msdt:dt="string">jQuery UI Accordion Item Template</mso:MasterPageDescription>
 <mso:ContentTypeId msdt:dt="string">0x0101002039C03B61C64EC4A04F5361F385106603</mso:ContentTypeId>
-<mso:TargetControlType msdt:dt="string">;#Content Web Parts;#</mso:TargetControlType>
+<mso:TargetControlType msdt:dt="string">;#SearchResults;#Content Web Parts;#</mso:TargetControlType>
 <mso:HtmlDesignAssociated msdt:dt="string">1</mso:HtmlDesignAssociated>
 </mso:CustomDocumentProperties>
 </xml><![endif]-->
 </head>
 
 <body>
-    <div id="TwoLines">
+    <div id="item_jQueryUI">
 <!--#_
             var line1 = $getItemValue(ctx, "Line 1");
             var grouping = $getItemValue(ctx, "Grouping");
@@ -25,7 +25,7 @@
             var content = String.format('<div class="cbs-Item"><a class="cbs-Line1Link ms-noWrap ms-displayBlock" href="{0}" title="{1}">{1}</a></div>', linkURL, line1);
             
             // Push the content to the grouping object
-            Srch.U.getRenderTemplateCollection().group_push(grouping, content);
+            Srch.U.getRenderTemplateCollection().accordion_push(grouping, content);
 _#-->
     </div>
 </body>
