--- a/Search Display Templates/Getting past the item limit control template (CSWP)/Control_List_All.html
+++ b/Search Display Templates/Getting past the item limit control template (CSWP)/Control_List_All.html
@@ -45,6 +45,9 @@
                         } else {
                             // Render the results if all are retrieved
                             render();
+                            // Once all the items are rendered, we need to reset the array and delete the StartRow property
+                            items = [];
+                            delete properties.StartRow;
                         }
                     });
                 },
