--- a/Search Display Templates/Result refinement display templates (CSWP)/Control_Refine_Without_Settings.html
+++ b/Search Display Templates/Result refinement display templates (CSWP)/Control_Refine_Without_Settings.html
@@ -89,11 +89,6 @@
                 display: display
             };
         }();
-
-        Srch.U.registerRenderTemplateByName("refine_init", search.refine.init);
-        Srch.U.registerRenderTemplateByName("refine_click", search.refine.click);
-        Srch.U.registerRenderTemplateByName("refine_all", search.refine.all);
-        Srch.U.registerRenderTemplateByName("refine_display", search.refine.display);
     </script>
 
     <div id="Control_List">
@@ -105,9 +100,9 @@ if (!$isNull(ctx.ClientControl) &&
     return "";
 }
 
-Srch.U.getRenderTemplateCollection().refine_init(ctx);
+search.refine.init(ctx);
 
-var displayStyle = Srch.U.getRenderTemplateCollection().refine_display() === true ? "" : "none";
+var displayStyle = search.refine.display() === true ? "" : "none";
 
 ctx.ListDataJSONGroupsKey = "ResultTables";
 var $noResults = Srch.ContentBySearch.getControlTemplateEncodedNoResultsMessage(ctx.ClientControl);
@@ -124,9 +119,9 @@ var ListRenderRenderWrapper = function(itemRenderResult, inCtx, tpl)
 }
 ctx['ItemRenderWrapper'] = ListRenderRenderWrapper;
 _#-->
-        <a href="#" onclick="Srch.U.getRenderTemplateCollection().refine_click($getClientControl(this), 'docx');return false;" title="Refine on 'docx'">Refine on 'docx'</a> - 
-        <a href="#" onclick="Srch.U.getRenderTemplateCollection().refine_click($getClientControl(this), 'pdf');return false;" title="Refine on 'pdf'">Refine on 'pdf'</a><span style='display:_#= $htmlEncode(displayStyle) =#_'> - </span>
-        <a href="#" style='display:_#= $htmlEncode(displayStyle) =#_' onclick="Srch.U.getRenderTemplateCollection().refine_all($getClientControl(this));return false;" title="Refine results">All results</a>
+        <a href="#" onclick="search.refine.click($getClientControl(this), 'docx');return false;" title="Refine on 'docx'">Refine on 'docx'</a> - 
+        <a href="#" onclick="search.refine.click($getClientControl(this), 'pdf');return false;" title="Refine on 'pdf'">Refine on 'pdf'</a><span style='display:_#= $htmlEncode(displayStyle) =#_'> - </span>
+        <a href="#" style='display:_#= $htmlEncode(displayStyle) =#_' onclick="search.refine.all($getClientControl(this));return false;" title="Refine results">All results</a>
         <ul class="cbs-List">
 
 <!--#_
