Updated template to fix a bug with new lists

--- a/Search Display Templates/Retrieve the list name in a display template/Item_Listname.html
+++ b/Search Display Templates/Retrieve the list name in a display template/Item_Listname.html
@@ -43,7 +43,9 @@
                 }
 
                 // Remove brackets from guid
-                listId = listId.substring(listId.indexOf('{') + 1, listId.indexOf('}'));
+                if (listId.indexOf("{") > 0) {
+                    listId = listId.substring(listId.indexOf('{') + 1, listId.indexOf('}'));
+                }
 
                 // Check if the list object exists, if it exists, an Ajax call is already initiated or performed
                 if (typeof listInfo[listId] !== "undefined") {
